Fixes bug where on smaller screens, all components below navbar had 0 padding. Makes navbar-toggler and navbar-brand on same line in smaller screens.

--- a/css/agency.css
+++ b/css/agency.css
@@ -5,3 +5,8 @@
 .navbar-nav {
   white-space: nowrap;
 }
+
+.navbar .container {
+  display: flex;
+  flex-wrap: initial;
+}
